@@ -23,7 +23,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -284,7 +283,7 @@ public class ConnectorHandle {
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStarts(expectedStarts))
                 .collect(Collectors.toList())
-                : Collections.emptyList();
+                : List.of();
         return startAndStopCounter.expectedStarts(expectedStarts, taskLatches);
     }
 
@@ -293,7 +292,7 @@ public class ConnectorHandle {
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStarts(expectedTasksStarts.get(task.taskId())))
                 .collect(Collectors.toList())
-                : Collections.emptyList();
+                : List.of();
         return startAndStopCounter.expectedStarts(expectedStarts, taskLatches);
     }
 
@@ -346,7 +345,7 @@ public class ConnectorHandle {
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStops(expectedStops))
                 .collect(Collectors.toList())
-                : Collections.emptyList();
+                : List.of();
         return startAndStopCounter.expectedStops(expectedStops, taskLatches);
     }
 
@@ -355,7 +354,7 @@ public class ConnectorHandle {
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStops(expectedTasksStops.get(task.taskId())))
                 .collect(Collectors.toList())
-                : Collections.emptyList();
+                : List.of();
         return startAndStopCounter.expectedStops(expectedStops, taskLatches);
     }
 
