@@ -161,8 +161,8 @@ public class TopicAdminTest {
         NewTopic newTopic = TopicAdmin.defineTopic("myTopic").partitions(1).compacted().build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, "myTopic", Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, "myTopic", List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             assertFalse(admin.createTopic(newTopic));
             assertTrue(admin.createTopics(newTopic).isEmpty());
@@ -307,12 +307,12 @@ public class TopicAdminTest {
         NewTopic newTopic = TopicAdmin.defineTopic(topicName).partitions(1).compacted().build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Map<String, TopicDescription> desc = admin.describeTopics(newTopic.name());
             assertFalse(desc.isEmpty());
-            TopicDescription topicDesc = new TopicDescription(topicName, false, Collections.singletonList(topicPartitionInfo));
+            TopicDescription topicDesc = new TopicDescription(topicName, false, List.of(topicPartitionInfo));
             assertEquals(desc.get("myTopic"), topicDesc);
         }
     }
@@ -381,14 +381,14 @@ public class TopicAdminTest {
     public void describeTopicConfigShouldReturnTopicConfigWhenTopicExists() {
         String topicName = "myTopic";
         NewTopic newTopic = TopicAdmin.defineTopic(topicName)
-                                      .config(Collections.singletonMap("foo", "bar"))
+                                      .config(Map.of("foo", "bar"))
                                       .partitions(1)
                                       .compacted()
                                       .build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Map<String, Config> result = admin.describeTopicConfigs(newTopic.name());
             assertFalse(result.isEmpty());
@@ -438,11 +438,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldReturnTrueWhenTopicHasCorrectPolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             boolean result = admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose");
             assertTrue(result);
@@ -452,11 +452,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldFailWhenTopicHasDeletePolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "delete");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "delete");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             ConfigException e = assertThrows(ConfigException.class, () -> admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose"));
             assertTrue(e.getMessage().contains("to guarantee consistency and durability"));
@@ -466,11 +466,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldFailWhenTopicHasDeleteAndCompactPolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "delete,compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "delete,compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             ConfigException e = assertThrows(ConfigException.class, () -> admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose"));
             assertTrue(e.getMessage().contains("to guarantee consistency and durability"));
@@ -480,11 +480,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingGettingTopicCleanupPolicies() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Set<String> policies = admin.topicCleanupPolicy("myTopic");
             assertEquals(1, policies.size());
@@ -501,7 +501,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldRethrowUnknownVersionException() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -519,7 +519,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldWrapNonRetriableExceptionsWithConnectException() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = 1000L;
         Cluster cluster = createCluster(1, "myTopic", 1);
 
@@ -548,7 +548,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldRetryWhenTopicNotFound() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = 1000L;
         Cluster cluster = createCluster(1, "myTopic", 1);
 
@@ -560,7 +560,7 @@ public class TopicAdminTest {
 
             TopicAdmin admin = new TopicAdmin(env.adminClient());
             Map<TopicPartition, Long> endoffsets = admin.retryEndOffsets(tps, Duration.ofMillis(100), 1);
-            assertEquals(Collections.singletonMap(tp1, offset), endoffsets);
+            assertEquals(Map.of(tp1, offset), endoffsets);
         }
     }
 
@@ -568,7 +568,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithNonRetriableWhenAuthorizationFailureOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -585,7 +585,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithUnsupportedVersionWhenVersionUnsupportedErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -601,7 +601,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithTimeoutExceptionWhenTimeoutErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(
@@ -619,7 +619,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithNonRetriableWhenUnknownErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -638,7 +638,7 @@ public class TopicAdminTest {
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
             TopicAdmin admin = new TopicAdmin(env.adminClient());
-            Map<TopicPartition, Long> offsets = admin.endOffsets(Collections.emptySet());
+            Map<TopicPartition, Long> offsets = admin.endOffsets(Set.of());
             assertTrue(offsets.isEmpty());
         }
     }
@@ -647,7 +647,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldReturnOffsetsForOnePartition() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         long offset = 1000L;
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -686,7 +686,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWhenAnyTopicPartitionHasError() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
             env.kafkaClient().setNodeApiVersions(NodeApiVersions.create());
@@ -718,8 +718,8 @@ public class TopicAdminTest {
                 "mockClusterId",
                 nodes.values(),
                 pInfos,
-                Collections.emptySet(),
-                Collections.emptySet(),
+                Set.of(),
+                Set.of(),
                 leader);
     }
 
@@ -787,7 +787,7 @@ public class TopicAdminTest {
     }
 
     private ListOffsetsResponse listOffsetsResult(TopicPartition tp1, Long offset1) {
-        return listOffsetsResult(null, Collections.singletonMap(tp1, offset1));
+        return listOffsetsResult(null, Map.of(tp1, offset1));
     }
 
     private ListOffsetsResponse listOffsetsResult(TopicPartition tp1, Long offset1, TopicPartition tp2, Long offset2) {
@@ -889,7 +889,7 @@ public class TopicAdminTest {
 
     protected TopicDescription topicDescription(MockAdminClient admin, String topicName)
             throws ExecutionException, InterruptedException {
-        DescribeTopicsResult result = admin.describeTopics(Collections.singleton(topicName));
+        DescribeTopicsResult result = admin.describeTopics(Set.of(topicName));
         Map<String, KafkaFuture<TopicDescription>> byName = result.topicNameValues();
         return byName.get(topicName).get();
     }
